--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,6 @@ Layout/LineLength:
     - spec/**/*
     - bridgetown-seo-tag.gemspec
 
-Layout/BlockLength:
+Metrics/BlockLength:
   Exclude:
     - spec/**/*
