Switch to using Rubocop Bridgetown gem

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,11 +1,11 @@
 inherit_from: .rubocop_todo.yml
 
-require: rubocop-jekyll
+require: rubocop-bridgetown
 inherit_gem:
-  rubocop-jekyll: .rubocop.yml
+  rubocop-bridgetown: .rubocop.yml
 
 AllCops:
-  TargetRubyVersion: 2.4
+  TargetRubyVersion: 2.5
   Exclude:
     - vendor/**/*
 
