Change title format and handle Bridgetown 1.0 templates

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,3 +17,10 @@ Layout/LineLength:
 Metrics/BlockLength:
   Exclude:
     - spec/**/*
+
+Lint/MissingSuper:
+  Enabled: false
+
+Performance/CollectionLiteralInLoop:
+  Exclude:
+    - spec/**/*
