--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,8 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby_version: [3.1.3, 3.2.0, 3.3.0, 3.4.0]
-        bridgetown_version: [1.3.4]
+        # TODO: 3.4.0 was blowing up with html-proofer / ffi issues
+        ruby_version: [3.1.3, 3.2.0, 3.3.0]
+        bridgetown_version: [1.3.0]
     continue-on-error: ${{ endsWith(matrix.ruby, 'head') || matrix.ruby == 'debug' }}
     # Has to be top level to cache properly
     env:
